# shtomo

./: .gitignore  .pdm-python  README.md  main.py  pyproject.toml  requirements.txt  setup.py  shtomo.py
shtomo/: __init__.py  client.py  parser_socks5_url.py  shell_io.py  shtomo.py
